--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-03  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
+
+	* applications.src: Added Narim and GDick. Changed the mail address
+	for applying new application additions from lgs@cvs.gnome.org to
+	pygtk-web@pygtk.org.
+
 2003-12-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* feedback.src: added a small section about how to contact the web
