central place for the tasks to be done on pygtk.
2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* developer.src: central place for the tasks to be done on pygtk.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
+	* developer.src: central place for the tasks to be done on pygtk.
+
 2004-02-20  Christian Reis <kiko@async.com.br>
 
     * index.src, newsitems.src: added item for the GRAMS gnome-print bounty.
