--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
+
+	* head.src: Added a menu entry for the developer page.
+
+	* applications.src: Added NumExp, Gustavo nice project.
+
 2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
 	* developer.src: Added another bug in the list.
