--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
     * Makefile: use -N (instead of -c) to wget fetches the newer tarballs
     correctly. Also inverted tar arguments to make Greg happy.
 
+    * developer.src: Fix bug numbers.
+
 2004-02-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* head.src: Added a menu entry for the developer page.
