--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 
     * foot.src, reference.src, tutorial.src: fix dates to use ISO format.
 
+    * Makefile, tutorial.src, reference.src: add lgs' spanish translation 
+    of the tutorial, fixing the links to it in the tutorial page. Also updated
+    the tarball sizes.
+
 2004-02-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* head.src: Added a menu entry for the developer page.
