--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-01  Christian Reis <kiko@async.com.br>
+
+    * feedback.src: minor visual fixups to first section.
+
+    * developer.src: add links to "Report new bugs", patches pending and open
+    bugs.
+
 2004-03-03  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* applications.src: added MojoView
