--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2004-03-07  Christian Reis <kiko@async.com.br>
+    
+    * articles.src: added Lars' treeview tutorial, requested by Milton Moura
+    <miltonmoura@sapo.pt>.
+
 2004-03-07  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* index.src: fixed the maxlines argument to the include call of the
 	news.
 
-2004-03-01  Christian Reis <kiko@async.com.br>
+2004-03-05  Christian Reis <kiko@async.com.br>
 
     * feedback.src: minor visual fixups to first section.
 
