--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Johan Dahlin  <johan@gnome.org>
+
+	* developer.src (href): Remove 129490 from long standing bugs.
+
 2004-03-07  Christian Reis <kiko@async.com.br>
     
     * articles.src: added Lars' treeview tutorial, requested by Milton Moura
