--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-11  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
+
+	* newsitems.src: added a note of the 2.2.0 release.
+
+	* index.src: updated the maxlines.
+
 2004-03-08  Johan Dahlin  <johan@gnome.org>
 
 	* developer.src (href): Remove 129490 from long standing bugs.
