--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
 2004-03-07  Christian Reis <kiko@async.com.br>
 
-    * newsitems.src: added a note about PyGtkSpell to items. 
+    * newsitems.src: added a note about PyGtkSpell to items. Updated the
+    gnome-print bounty item.
 
 	* index.src: updated the maxlines.
 
     * downloads.src: minor fixes to text, and using <strong> to make lgs
     happy.
-
+	
 2004-03-11  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* newsitems.src: added a note of the 2.2.0 release.
