--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-12  Johan Dahlin  <johan@gnome.org>
+
+	* downloads.src: Update the download section, add 2.0.x and
+	clarify that we require gtk+ 2.2.x now.
+
 2004-03-07  Christian Reis <kiko@async.com.br>
 
     * newsitems.src: added a note about PyGtkSpell to items. Updated the
