--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-14  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
+
+	* applications.src: added Mum.
+
 2004-03-12  Johan Dahlin  <johan@gnome.org>
 
 	* downloads.src: Update the download section, add 2.0.x and
