--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-17  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
+
+	* applications.src: added a small horizontal menu at the top of the
+	page. Added CANVAS.
+
 2004-03-07  Christian Reis <kiko@async.com.br>
 
 	* applications.src: Removed BugTool per Mikhail Sobolev's request --
