--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-26  Xavier Ordoquy  <xordoquy@wanadoo.fr>
+
+	* people.src: added myself.
+
 2004-03-17  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>
 
 	* applications.src: added a small horizontal menu at the top of the
