--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-22  Johan Dahlin  <johan@gnome.org>
+
+	* newsitems.src: Add 2.3.92 release
+
+	* head.src (xml): Link to the FAQ index directly
+
 2004-04-16  Lorenzo Gil Sanchez  <lgs@i8100.sicem.biz>
 
 	* index.src: changed maxlines to include the new announce.
