added go siege.
2004-06-08  Lorenzo Gil Sanchez  <lgs@sexmachine.homelinux.net>

	* applications.src: added go siege.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2004-06-08  Lorenzo Gil Sanchez  <lgs@sexmachine.homelinux.net>
+
+	* applications.src: added go siege.
 
 2004-06-01  Christian Reis <kiko@async.com.br>
 	
