--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Christian Reis <kiko@async.com.br>
+
+	* applications.src: added gjots.
+
 2004-06-08  Lorenzo Gil Sanchez  <lgs@sexmachine.homelinux.net>
 
 	* applications.src: added go siege.
