Adding GNU Solfege.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-08  Christian Reis <kiko@async.com.br>
 
+	* applications.src: added GNU Solfege.
+
+2004-06-08  Christian Reis <kiko@async.com.br>
+
 	* applications.src: added gjots.
 
 2004-06-08  Lorenzo Gil Sanchez  <lgs@sexmachine.homelinux.net>
