--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
-2004-06-08  Christian Reis <kiko@async.com.br>
+2004-06-12  Christian Reis <kiko@async.com.br>
+
+	* developer.src: updated open bug list.
+
+2004-06-11  Christian Reis <kiko@async.com.br>
 
 	* applications.src: added GNU Solfege.
 
-2004-06-08  Christian Reis <kiko@async.com.br>
+2004-06-10  Christian Reis <kiko@async.com.br>
 
 	* applications.src: added gjots.
 
