Added Gourmet Recipe Manager.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Christian Reis <kiko@async.com.br>
+
+	* applications.src: added Gourmet Recipe Manager.
+
 2004-06-12  Christian Reis <kiko@async.com.br>
 
 	* developer.src: updated open bug list.
