--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added GNOME War Pad.
+
 2004-06-15  Christian Reis <kiko@async.com.br>
 
 	* applications.src: added Gourmet Recipe Manager.
