updated version numbers.
* reference.src, tutorial.src: updated version numbers.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-15  Christian Reis <kiko@async.com.br>
+
+	* reference.src, tutorial.src: updated version numbers.
+
 2004-06-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added GNOME War Pad.
