--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* newsitems.src: added version 2.1 of tutorial news.
+
+	* index.src: changed maxlines to include the updated news.
+
+	* tutorial.src: updated tutorial version number.
+
+	* applications.src: added Circle.
+
 2004-06-15  Christian Reis <kiko@async.com.br>
 
 	* reference.src, tutorial.src: updated version numbers.
