--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-08  Christian Reis <kiko@async.com.br>
+
+	* tutorial.src: changed headings
+
 2004-07-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* newsitems.src: added version 2.1 of tutorial news.
