Updated version number, tarball size and date.
	* reference.src: Updated version number, tarball size and date.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-14  John Finlay  <finlay@moeraki.com>
+
+	* reference.src: Updated version number, tarball size and date.
+
 2004-07-08  Christian Reis <kiko@async.com.br>
 
 	* tutorial.src: changed headings
