--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-16  Christian Reis <kiko@async.com.br>
+	
+	* articles.src: add Elijah's tri-lingual tutorial
+
 2004-07-15  Christian Reis <kiko@async.com.br>
 
 	* downloads.src: update versions
