applications. add Infogreater
* applications. add Infogreater

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-2004-07-16  Christian Reis <kiko@async.com.br>
+2004-07-17  Christian Reis <kiko@async.com.br>
 	
 	* articles.src: add Elijah's tri-lingual tutorial
+
+	* applications.src: add Infogreater
 
 2004-07-15  Christian Reis <kiko@async.com.br>
 
