--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-19  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* newsitems.src: added announce for PyGTK 2.3.93
+
 2004-07-17  Christian Reis <kiko@async.com.br>
 	
 	* articles.src: add Elijah's tri-lingual tutorial
