--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added Blogfish and Amauta UPS monitor
+
 2004-07-19  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* newsitems.src: added announce for PyGTK 2.3.93
