recategorize some of the apps, some rewording
        * applications.src: recategorize some of the apps, some rewording

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-21  Christian Reis <kiko@async.com.br>
+
+	* applications.src: recategorize some of the apps, some rewording
+
 2004-07-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added Blogfish and Amauta UPS monitor
