--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-23  Johan Dahlin  <johan@gnome.org>
+
+	* newsitems.src: 2.3.94
+
 2004-07-22  Christian Reis <kiko@async.com.br>
 
 	* applications.src: rehack UPS Monitor
