--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-06  Christian Reis <kiko@async.com.br>
+
+	* add Micropics.
+
 2004-08-06  John Finlay  <finlay@moeraki.com>
 
 	* developer.src Remove some bug links and add more info on source
