--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-12  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.src Add item re devhelp support in the Reference Manual.
+
+	* reference.src Update version and date info.
+
 2004-08-06  Christian Reis <kiko@async.com.br>
 
 	* add Micropics.
